Add image support

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -42,5 +42,12 @@
         }
       }
     }
+  },
+  "storage": {
+    "itemimages": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
